# python-sdk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: check-format.yml  check-lock.yml  check-types.yml  main-checks.yml  main.yml  publish-docs-manually.yml  publish-pypi.yml  pull-request-checks.yml  shared.yml
docs/: api.md  index.md
examples/: README.md
examples/clients/simple-chatbot/: README.MD  pyproject.toml
examples/clients/simple-chatbot/mcp_simple_chatbot/: .env.example  main.py  requirements.txt  test.db
examples/fastmcp/: complex_inputs.py  desktop.py  echo.py  memory.py  parameter_descriptions.py  readme-quickstart.py  screenshot.py  simple_echo.py  text_me.py  unicode_example.py
examples/servers/simple-auth/: README.md  pyproject.toml
examples/servers/simple-auth/mcp_simple_auth/: __main__.py  server.py
examples/servers/simple-prompt/: README.md  pyproject.toml
examples/servers/simple-prompt/mcp_simple_prompt/: server.py
examples/servers/simple-resource/: README.md  pyproject.toml
examples/servers/simple-resource/mcp_simple_resource/: server.py
examples/servers/simple-streamablehttp/: README.md
examples/servers/simple-streamablehttp-stateless/: README.md
examples/servers/simple-streamablehttp-stateless/mcp_simple_streamablehttp_stateless/: server.py
examples/servers/simple-streamablehttp/mcp_simple_streamablehttp/: server.py
examples/servers/simple-tool/: README.md  pyproject.toml
examples/servers/simple-tool/mcp_simple_tool/: server.py
mcp_python/: __init__.py  types.py
mcp_python/client/: __main__.py  session.py  sse.py  stdio.py
mcp_python/server/: __init__.py  __main__.py  session.py  sse.py  stdio.py  types.py  websocket.py
mcp_python/shared/: context.py  exceptions.py  memory.py  progress.py  session.py  version.py
src/mcp/: types.py
src/mcp/cli/: __init__.py  claude.py  cli.py
src/mcp/client/: __main__.py  session.py  sse.py  stdio.py  streamable_http.py  websocket.py
src/mcp/client/stdio/: __init__.py
src/mcp/server/: __init__.py  __main__.py  models.py  session.py  sse.py  stdio.py  streamableHttp.py  streamable_http.py  streamable_http_manager.py  types.py  websocket.py
src/mcp/server/auth/: routes.py
src/mcp/server/auth/middleware/: bearer_auth.py
src/mcp/server/fastmcp/: __init__.py  server.py
src/mcp/server/fastmcp/prompts/: base.py
src/mcp/server/fastmcp/resources/: __init__.py  resource_manager.py  types.py
src/mcp/server/fastmcp/tools/: base.py  tool_manager.py
src/mcp/server/fastmcp/utilities/: func_metadata.py  logging.py
src/mcp/server/lowlevel/: __init__.py  server.py
src/mcp/server/message_queue/: __init__.py  base.py  redis.py
src/mcp/shared/: _httpx_utils.py  context.py  exceptions.py  memory.py  message.py  progress.py  session.py
tests/: conftest.py  test_examples.py  test_types.py
tests/client/: test_config.py  test_list_roots_callback.py  test_logging_callback.py  test_resource_cleanup.py  test_sampling_callback.py  test_session.py  test_sse_attempt.py  test_stdio.py
tests/issues/: test_100_tool_listing.py  test_129_resource_templates.py  test_141_resource_templates.py  test_152_resource_mime_type.py  test_176_progress_token.py  test_188_concurrency.py  test_192_request_id.py  test_342_base64_encoding.py  test_355_type_error.py  test_88_random_error.py
tests/server/: test_lifespan.py  test_lowlevel_tool_annotations.py  test_read_resource.py  test_session.py  test_stdio.py  test_streamableHttp.py  test_streamable_http_manager.py
tests/server/auth/: test_error_handling.py
tests/server/auth/middleware/: test_auth_context.py  test_bearer_auth.py
tests/server/fastmcp/: test_func_metadata.py  test_integration.py  test_parameter_descriptions.py  test_server.py  test_tool_manager.py
tests/server/fastmcp/auth/: __init__.py  test_auth_integration.py
tests/server/fastmcp/prompts/: test_base.py  test_manager.py
tests/server/fastmcp/resources/: test_file_resources.py  test_function_resources.py  test_resource_manager.py  test_resource_template.py  test_resources.py
tests/server/fastmcp/servers/: test_file_server.py
tests/server/message_dispatch/: __init__.py  conftest.py  test_redis.py  test_redis_integration.py
tests/shared/: test_httpx_utils.py  test_memory.py  test_session.py  test_sse.py  test_streamable_http.py  test_ws.py
